RESOLVED FIXED302098
[macOS] Simple WKWebView app with a toolbar fails to get a toolbar background
https://bugs.webkit.org/show_bug.cgi?id=302098
Summary [macOS] Simple WKWebView app with a toolbar fails to get a toolbar background
Wenson Hsieh
Reported 2025-11-06 11:01:42 PST
Attachments
Wenson Hsieh
Comment 1 2025-11-06 11:40:25 PST
EWS
Comment 2 2025-11-06 14:18:42 PST
Committed 302682@main (93fffd881e9d): <https://commits.webkit.org/302682@main> Reviewed commits have been landed. Closing PR #53542 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.